# monologue

./: LICENSE  README.md  manage.py  pyproject.toml
monologue/: admin.py  asgi.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
monologue/migrations/: 0001_initial.py
monologue/templates/: base.html  index.html  post.html
monologue/templates/default/: index.html  post.html
monologue/templates/octopress/: base.html  index.html  post.html
