[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"

[tool.poetry]
name = "monologue"
version = "0.1.0"
description = ""
authors = ["An Long <aisk1988@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
