[tool.poetry]
name = "django-monologue"
version = "0.1.0"
description = ""
authors = ["An Long <aisk1988@gmail.com>"]
packages = [
    { include = "monologue/**/*" },
]
exclude = [
    "monologue/asgi.py",
    "monologue/wsgi.py",
    "monologue/settings.py",
]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
markdown = "^3.2.2"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
